2nd attempt to fix home page on mobile so nav buttons align

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ h1, h2, h3 {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .logo {
